[package]
name = "minotp"
version = "1.0.0"
edition = "2021"

description = "Dead simple OTP library for Rust."
authors = ["Charles Dong <charlesdong_2000@outlook.com>"]

license = "MIT OR Apache-2.0"

keywords = ["otp", "hotp", "totp", "password"]
categories = ["cryptography", "no-std"]

readme = "README.md"

repository = "https://github.com/chardon55/minotp.git"
homepage = "https://github.com/chardon55/minotp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12"

[dev-dependencies]
chrono = "^0.4.33"
data-encoding = "2.5.0"
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

[features]

