[package]
name = "minotp"
version = "1.1.0"
edition = "2021"

description = "Dead simple OTP library for Rust."
authors = ["Charles Dong <charlesdong_2000@outlook.com>"]

license = "MIT OR Apache-2.0"

keywords = ["otp", "hotp", "totp", "password"]
categories = ["cryptography", "no-std"]

readme = "README.md"

repository = "https://github.com/chardon55/minotp.git"
homepage = "https://github.com/chardon55/minotp"

[dependencies]
hmac = "0.12"
chrono = { version = "0.4", optional = true }

[dev-dependencies]
data-encoding = "2.5.0"
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

[features]
default = []
chrono = ["dep:chrono"]

