[package]
name = "minotp"
version = "1.2.0"
edition = "2021"

description = "Simple OTP library for Rust."
authors = ["Charles Dong <chardon_cs@proton.me>"]

license = "MIT"

keywords = ["otp", "hotp", "totp", "password"]
categories = ["cryptography", "no-std"]

readme = "README.md"

repository = "https://github.com/chardoncs/minotp.git"
homepage = "https://github.com/chardoncs/minotp"

[dependencies]
hmac = "0.12"

[dev-dependencies]
data-encoding = "2.6"
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

[features]
default = []

